src/third_party/nasm/travis/test/br3392637.stderr
./travis/test/br3392637.asm:13: error: instruction not supported in 16-bit mode
./travis/test/br3392637.asm:16: error: instruction not supported in 16-bit mode
./travis/test/br3392637.asm:17: error: instruction not supported in 16-bit mode
./travis/test/br3392637.asm:18: error: instruction not supported in 16-bit mode
./travis/test/br3392637.asm:24: error: instruction not supported in 16-bit mode
./travis/test/br3392637.asm:25: error: instruction not supported in 16-bit mode
./travis/test/br3392637.asm:27: error: instruction not supported in 16-bit mode
./travis/test/br3392637.asm:28: error: instruction not supported in 16-bit mode
./travis/test/br3392637.asm:29: error: instruction not supported in 16-bit mode
./travis/test/br3392637.asm:34: error: instruction not supported in 16-bit mode
./travis/test/br3392637.asm:35: error: instruction not supported in 16-bit mode
./travis/test/br3392637.asm:37: error: instruction not supported in 16-bit mode
./travis/test/br3392637.asm:38: error: instruction not supported in 16-bit mode
./travis/test/br3392637.asm:39: error: instruction not supported in 16-bit mode
./travis/test/br3392637.asm:43: error: instruction not supported in 16-bit mode
